2005-03-26  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Documentation is done!

	* AUTHORS,
	  lib/alexandria.rb:

	Added Liam.

2005-03-25  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/preferences_dialog.glade:

	- Use alternating colours for rows in the providers list ;
	- Make the dialog resizable.
	
	* lib/alexandria/library.rb:

	Preserves backward compatibility when saving a book by resetting the
	saved_ident property if it does not exist.

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/ui/export_dialog.rb:

	Say "already exists" rather than "is already existing".

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* data/alexandria/glade/preferences_dialog.glade:

	Rename the "List Columns" tab to "List View".

2005-03-25  Dafydd Harries  <daf@muse.19inch.net>

	* data/alexandria/glade/new_book_dialog.glade:

	Use alternating colours for rows in the search results list.

2005-03-24  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog.rb:

	Remembers (within the live scope of the application though) the latest 
	selected criterion in the Add Book dialog and automatically switches to
	it when the dialog is shown.

2005-03-23  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/amazon.rb:

	Caches in ~/.alexandria/.amazon_cache/ instead of /tmp/cache.

2005-03-22  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb:

	Really ignores hidden directories in ~/.alexandria/.

	* lib/alexandria/web_themes.rb:
	
	Allows user-specific themes in ~/.alexandria/.web-themes/.

	* AUTHORS,
	  lib/alexandria.rb:

	Added Rene.

2005-03-22  Rene Samselnig  <sandman@sdm-net.org> 

	* lib/alexandria/book_providers/amadeus.rb:

	Added amadeusbuch.at provider.
	
	* lib/alexandria/book_providers.rb,
	  schemas/alexandria.schemas:

	Follow latest change.

2005-03-22  Dafydd Harries  <daf@muse.19inch.net>

	* po/genpot.sh:
